--- a/index.html
+++ b/index.html
@@ -13,43 +13,17 @@
     <p id='second'> this is my body2</p>
     <p class='odd'> this is my body3</p>
     <p> this is my body4</p>
+    <button id='but'>Toggle now</button>
+
+    <div id="wiki">
+        Gerald Durrell (7 January 1925 – 30 January 1995) was a British naturalist, writer and zookeeper. He was born in British India and moved to England in 1928. In 1935 the family moved to Corfu, but the outbreak of World War II forced them to return to the United Kingdom. In the 1940s he began animal-collecting trips for zoos, and published well-received accounts of these, starting with The Overloaded Ark. His account of the years in Corfu, titled My Family and Other Animals, appeared in 1956 and became a bestseller. He founded the Jersey Zoo in 1959, intending it to be an institution for the study of animals and for captive breeding. Durrell and his second wife, Lee McGeorge, made several television documentaries in the 1980s, including Durrell in Russia and Ark on the Move. They co-authored The Amateur Naturalist, which became his most successful book, selling well over a million copies. His ashes were buried at Jersey Zoo
+    </div>
 
 </body>
 <script src="js/jquery-3.7.1.min.js"></script>
+<script src="js/myjQuery.js"></script>
+<script src="js/events.js"></script>
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
-<script>
-
-$(document).ready(function(){
-// our jquery code here
-    console.log($); //$ it means jquery syntax
-    // $('selector').action()  --- syntax
-
-    // 1) element selector example
-    // $('p').click(); 
-
-    $('p').click(function () {
-        console.log('you clicked on p', this);
-        // $('p').hide();
-        //$(this).hide();
-        // $('#id').hide();
-        // $('.class').hide();
-    }); // when we click on p do this
-
-    // 2) id selector example
-    //$('#second').click();
-
-    // 3) class selector example
-    $('.odd').click();
-
-    //other selectors
-    // $('*').click();  //clicks on all the elements
-    // $('p.odd').click();
-    // $('p:first').click();
-
-
-})
-    
-</script>
 
 
 </html>
